src/test/ui/type-alias-impl-trait/nested-tait-inference2.stderr
error[E0282]: type annotations needed
  --> $DIR/nested-tait-inference2.rs:15:5
   |
LL |     ()
   |     ^^ cannot infer type

error[E0283]: type annotations needed
  --> $DIR/nested-tait-inference2.rs:15:5
   |
LL |     ()
   |     ^^ cannot infer type
   |
note: multiple `impl`s satisfying `(): Foo<_>` found
  --> $DIR/nested-tait-inference2.rs:11:1
   |
LL | impl Foo<()> for () {}
   | ^^^^^^^^^^^^^^^^^^^
LL | impl Foo<u32> for () {}
   | ^^^^^^^^^^^^^^^^^^^^

error: could not find defining uses
  --> $DIR/nested-tait-inference2.rs:6:13
   |
LL | type FooX = impl Debug;
   |             ^^^^^^^^^^

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0282, E0283.
For more information about an error, try `rustc --explain E0282`.
